tests/snapshots/formatter_snapshot_test__yaml_page_subsequent_has_separator.snap
---
source: tests/formatter_snapshot_test.rs
expression: output
---
---
click_rate: 0.07
id: camp_abc123
name: Spring Sale Newsletter
open_rate: 0.28
schedule:
  send_at: '2024-04-01T09:00:00Z'
  type: 0
sent_count: 15000
status: draft
subject: Don't miss our Spring Sale!
